# personal-finance-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.openspec/: telegram-finance-assistant.md
docs/: SDD-personal-finance-bot.md  prompt-reverse-engineered.md  setup-external-services.md
docs/prd/: PRD-personal-finance-bot.md
src/: __init__.py  bot.py  config.py  web_server.py
src/auth/: __init__.py  encryption.py  oauth.py  token_store.py
src/cache/: memory_cache.py
src/handlers/: __init__.py  auth.py  budgets.py  categories.py  commands.py  messages.py  onboarding.py  payments.py  premium.py  recurring.py
src/middleware/: __init__.py  premium_gate.py
src/payments/: midtrans.py  stars.py
src/sheets/: __init__.py  (+6 more)
static/: login.html
tasks/: telegram-finance-assistant.plan.md
tests/: conftest.py  test_auth_handlers.py  test_bot.py  test_budget_handler.py  test_budget_service.py  test_category_handler.py  test_commands.py  test_config.py  test_dashboard.py  test_encryption.py  test_error_handler.py  test_insight_command.py  test_insight_service.py  test_message_handler.py  test_message_handler_photo.py  test_midtrans_payment.py  test_oauth.py  test_ocr_service.py  test_onboarding.py  test_parser.py  test_premium_gate.py  test_premium_handlers.py  test_recurring_handler.py  test_recurring_service.py  test_report_service.py  test_sheet_setup.py  test_sheets_categories.py  test_sheets_client.py  test_sheets_transactions.py  test_stars_payment.py  test_subscription_service.py  test_token_store.py  test_transaction_service.py  test_web_server.py
(+9 files in other folders)
