[project]
name = "personal-finance-bot"
version = "0.1.0"
description = "Telegram bot assistant for personal finance (Asisten Keuangan)"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue,webhooks]>=21.0,<22.0",
    "gspread>=6.0,<7.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-api-python-client>=2.0,<3.0",
    "cryptography>=42.0,<43.0",
    "aiohttp>=3.9,<4.0",
    "pydantic-settings>=2.0,<3.0",
    "matplotlib>=3.9,<4.0",
    "midtransclient>=1.0,<2.0",
    "google-genai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
